# MiguelRodrigues

./: LowCostRobot.txt  README.md  Roadmap semana.txt
pharmarobot/pharmarobot_ros2-master/: .gitignore  Dockerfile  ReadMe.md  build_and_run_docker.sh  docker_installtion.sh  run_docker_boot.sh  working_log.md
pharmarobot/pharmarobot_ros2-master/src/joy_to_cmdvel/: CMakeLists.txt  package.xml
pharmarobot/pharmarobot_ros2-master/src/joy_to_cmdvel/src/: joy_to_cmd_vel.cpp
pharmarobot/pharmarobot_ros2-master/src/joystick_drivers/joy_linux/src/: joy_linux_node.cpp
pharmarobot/pharmarobot_ros2-master/src/kalman_odom/: CMakeLists.txt  package.xml
pharmarobot/pharmarobot_ros2-master/src/kalman_odom/launch/: kalman_filter.launch.py
pharmarobot/pharmarobot_ros2-master/src/kalman_odom/scripts/: test_sim_input.py
pharmarobot/pharmarobot_ros2-master/src/kalman_odom/src/: kalman_odom_node.cpp  test_sim_input.cpp
pharmarobot/pharmarobot_ros2-master/src/os_settings/: pharmarobot.service
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/: CMakeLists.txt  README.md  package.xml
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/config/: roboteq.yaml
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/include/roboteq_ros2_driver/: roboteq_ros2_driver.hpp
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/launch/: roboteq_ros2_driver.launch.py
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/msg/: WheelTicks.msg
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/src/: driver_dev.cpp
pharmarobot/pharmarobot_ros2-master/src/roboteq_ros2_driver/src/differential_drive_kinematics/: differential_drive_kinematics.cpp  differential_drive_kinematics.hpp
pharmarobot/pharmarobot_ros2-master/src/teleop_pharma/: CMakeLists.txt  package.xml  setup.py
pharmarobot/pharmarobot_ros2-master/src/teleop_pharma/launch/: teleop.launch.py  teleop_launch.xml
